--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,8 @@
+
 cmake_minimum_required(VERSION 3.18)
 set(CMAKE_RC_COMPILER "windres")
+set(CMAKE_BUILD_TYPE Release)
 project(wxcmaketest)
-
-IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
-    message("debug mode")
-ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)
 
 
 set(SOURCES 
@@ -15,6 +13,12 @@ set(SOURCES
     src/cMain.cpp
 )
 add_subdirectory(libs/wxWidgets)
-add_executable(${CMAKE_PROJECT_NAME} ${SOURCES})
+
+IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
+    message("debug mode")
+    add_executable(${CMAKE_PROJECT_NAME} ${SOURCES})
+ELSE()
+    add_executable(${CMAKE_PROJECT_NAME} WIN32 ${SOURCES})
+ENDIF()
+
 target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE wx::net wx::core wx::base)
-set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS")
